force-app/main/default/objects/Material_Requisition_line_item__c/Material_Requisition_line_item__c.object-meta.xml
<CustomObject>
    <label>Material Requisition line item</label>
    <nameField>
        <label>Material Requisition line items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Material Requisition line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>