force-app/main/default/objects/Material_Requisition_line_item__c/fields/Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cost__c</fullName>
    <formula>Unit_Cost__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>