force-app/main/default/objects/Material_Requisition_line_item__c/fields/Extended_Cost_Value__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cost_Value__c</fullName>
    <label>Extended Cost Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>