force-app/main/default/objects/Material_Requisition_line_item__c/fields/IsPicklist__c.field-meta.xml
<CustomField>
    <fullName>IsPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPicklist</label>
    <type>Checkbox</type>
</CustomField>