force-app/main/default/objects/Material_Requisition_line_item__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <formula>Material_Requisition__r.Date_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>