force-app/main/default/objects/Material_Requisition_line_item__c/fields/Issue_Value__c.field-meta.xml
<CustomField>
    <fullName>Issue_Value__c</fullName>
    <formula>Unit_Cost__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>