force-app/main/default/objects/Material_Requisition_line_item__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <formula>TEXT(Material__r.Item_Code__c)</formula>
    <label>Item Code</label>
    <type>Text</type>
</CustomField>