force-app/main/default/objects/Material_Requisition_line_item__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Material Requisition line items</relationshipLabel>
    <relationshipName>Material_Requisition_line_items</relationshipName>
    <type>Lookup</type>
</CustomField>