force-app/main/default/objects/Material_Requisition_line_item__c/fields/Material_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Material_Requisition__c</fullName>
    <label>Material Requisition</label>
    <referenceTo>Material_Requisition__c</referenceTo>
    <relationshipLabel>Material Requisition line items</relationshipLabel>
    <relationshipName>Material_Requisition_line_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>