force-app/main/default/objects/Material_Requisition_line_item__c/fields/MR_Line_Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>MR_Line_Item_Cost__c</fullName>
    <formula>Issue_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR Line Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>