force-app/main/default/objects/Material_Requisition_line_item__c/fields/Returned__c.field-meta.xml
<CustomField>
    <fullName>Returned__c</fullName>
    <label>Returned</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>