force-app/main/default/objects/Material_Requisition_line_item__c/fields/Shipped__c.field-meta.xml
<CustomField>
    <fullName>Shipped__c</fullName>
    <label>Shipped</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>